add contact us api and gender + saint avatarId
